--- a/vendor navbar.mdx
+++ b/vendor navbar.mdx
@@ -1,4 +1,6 @@
-## Navbar / Header
+---
+title: "Vendor/Navbar"
+---
 
 The **Navbar** (also called the **Header**) is the section displayed at the top of your website. It helps users navigate easily between pages.
 
