--- a/Website/page template.mdx
+++ b/Website/page template.mdx
@@ -138,3 +138,5 @@ Offer discounts to customers with flexible coupon options.
 ---
 
 Need this as a React page, HTML template, or Markdown doc? Just let me know how you'd like to use it!
+![Favicon Image](/images/pagetemplate.png)
+![Favicon Image](/images/pagetemplate1.png)
