--- a/Website/website pages.mdx
+++ b/Website/website pages.mdx
@@ -17,7 +17,7 @@ The following pages are included by default and **cannot be renamed or deleted**
 - **Checkout**
 - **Order Track**
 
-![Default Pages](https://yourdomain.com/path-to-default-pages-image.png)
+![Favicon Image](/images/website.png)
 
 > These are essential for core e-commerce functionality and are fixed for consistency.
 
@@ -39,7 +39,9 @@ To add new pages:
 - **SEO Title and Description**
   - The **SEO Title** is shown on the browser tab.
   - The **SEO Description** is used when sharing links on social media.  
-    These help improve visibility and click-through rates.
+     These help improve visibility and click-through rates.
+    ![Favicon Image](/images/Custompage.png)
+    ![Favicon Image](/images/seo.png)
 
 ---
 
@@ -49,4 +51,41 @@ Each custom page added will include a **delete icon**.
 
 - Click the **delete icon** to remove the page from your website.
 
-![Deleting Page](https://yourdomain.com/path-to-delete-page-image.png)
+![Favicon Image](/images/deletepage.png)
+
+# Shop
+
+- View all products with price and details.
+- Filters for categories, price range, and more.
+  ![Favicon Image](/images/Shop.png)
+  ![Favicon Image](/images/Shopdetail.png)
+
+# Order Tracking
+
+- Track order status and see order summary.
+- Displays payment and shipping details, estimated delivery.
+  ![Favicon Image](/images/Order track.png)
+
+# Wishlist
+
+- Save and review products marked as favorites.
+- Personalized based on user preferences.
+  ![Favicon Image](/images/wishlist.png)
+
+# FAQ
+
+- Search and browse common queries.
+- Organized by topic (shipping, returns, etc.).
+  ![Favicon Image](/images/faq.png)
+
+# Contact Us
+
+- Contact form for inquiries and support.
+- Includes email, phone, and live chat options.
+  ![Favicon Image](/images/contactus.png)
+  ![Favicon Image](/images/contactus1.png)
+
+# Custom Pages
+
+- Create custom pages like blogs, promotions, etc.
+- Flexible layout and content management.
