--- a/ecommerce.mdx
+++ b/ecommerce.mdx
@@ -37,7 +37,19 @@ The Theme Navbar section allows you to customize the **visual identity** of your
   Click the image section to upload or change the logo anytime.
 
 - **Favicon Image**  
-  The favicon is a small icon that appears in the browser tab, bookmarks, and browser address bar.  
-  It visually represents your brand when users open your website.
+   The favicon is a small icon that appears in the browser tab, bookmarks, and browser address bar.  
+   It visually represents your brand when users open your website.
+  {" "}
+  {" "}
+  {" "}
+
+  {" "}
+
+  <Card icon="🌟">
+    The favicon is a small icon that appears in the browser tab, bookmarks, and
+    browser address bar.
+  </Card>
+
+  ![Favicon Image](/images/Favicon.png)
 
 ---
