--- a/footer.mdx
+++ b/footer.mdx
@@ -39,10 +39,7 @@ You can fully customize this message to meet your business or legal needs.
 
 ---
 
-## Adding Images to Footer (or Anywhere in Docs)
+## Adding Images to Footer
 
-To add an image in Mintlify Markdown, use the following syntax:
-
-```md
-![Alt text for accessibility](https://example.com/image-url.jpg)
-```
+![Favicon Image](/images/footer2.png)
+![Favicon Image](/images/footer.png)
