--- a/vendor navbar.mdx
+++ b/vendor navbar.mdx
@@ -35,3 +35,6 @@ Adjust the visual style of your Navbar:
 
 - Change the **background color** of the Navbar.
 - Update the **text color** to align with your website’s theme and brand identity.
+
+![Favicon Image](/images/Navbar.png)
+![Favicon Image](/images/Navbar2.png)
