customer portal images added

--- a/Customer/dashboard.mdx
+++ b/Customer/dashboard.mdx
@@ -30,3 +30,4 @@ To access the Dashboard:
 ---
 
 _This section helps users get a quick overview of their account-related activity._
+![Favicon Image](/images/dashboard.png)
