--- a/Customer/Order.mdx
+++ b/Customer/Order.mdx
@@ -1,56 +1,81 @@
+# Order Creation Flow
+
+# Order List
+
+- Displays all orders that:
+  - You have created, or
+  - Have been created for you by the admin.
+- Allows easy tracking and management of existing orders.
+  ![Favicon Image](/images/orderlist.png)
+
+Follow these steps to create a new order.
+
+## 1. Sender & Receiver Details
+
+- Fill in personal details for both the **sender** and **receiver**.
+- Includes:
+  - Name
+  - Phone
+  - Address
+- Click **Next** to proceed.
+  ![Favicon Image](/images/orderpersonaldetail.png)
+
+## 2. Package Details
+
+- Enter all relevant package information:
+  - Type
+  - Weight
+  - Dimensions
+  - Contents
+- Click **Next** to proceed.
+  ![Favicon Image](/images/packagedetail.png)
+
+## 3. Branch Selection
+
+- Choose the **sending branch** (from) and the **destination branch**.
+- These define the route of the order.
+- Click **Next** to continue.
+  ![Favicon Image](/images/branch.png)
+
+## 4. Provider Selection
+
+- Select the **logistics provider**.
+- This could be based on:
+  - Price
+  - Delivery time
+  - Availability
+- Click **Next** to proceed.
+  ![Favicon Image](/images/provider.png)
+
+## 5. Order Confirmation
+
+- Review all entered information:
+  - Sender & Receiver Info
+  - Package Details
+  - Branch Route
+  - Provider Info
+- Ensure all details are correct.
+- Click **Submit** to finalize.
+  ![Favicon Image](/images/confirmation.png)
+
+✅ The order is now successfully created!
+
 ---
-title: "Vendor Order"
----
 
-A **Vendor Order** is an order created by a vendor.
+![Favicon Image](/images/orderdetail1.png)
 
----
+# After Order Creation – Detail Sections
 
-## List View
+Once the order is submitted, you can view and interact with the following sections:
+![Favicon Image](/images/orderdetail1.png)
 
-The list view displays key information about each vendor order:
+## 1. Comment Section
 
-- **Vendor's Name**
-- **Order Status**
-- **Total Amount**
-- **Payment Status**
-- **Date Created**
-
-This view gives a quick overview of all vendor-generated orders.
+- **Add a Comment**: Submit internal notes or updates about the order.
+- **Edit Comment**: Modify previously added comments by clicking the **Edit** button.
+- **Reply to Comment**: Use the **Reply** button to respond to a comment.
+- **Hide Replies**: Collapse all replies under a comment using the **Hide Replies** option.
 
 ---
 
-## Detail View
-
-The detail view provides an in-depth look at a selected vendor order. It includes:
-
-### 1. Vendor Details Summary
-
-- Vendor name
-- Contact information
-- Company details
-
-### 2. Order Details Summary
-
-- Products/services ordered
-- Quantity, pricing, and subtotal
-- Delivery and payment info
-
-### 3. Customer Details
-
-- Customer name
-- Contact information
-- Shipping address
-
----
-
-## Order History
-
-A **History Section** logs all updates related to the order, including:
-
-- **Delivery Status Changes**
-  - e.g., Shipped → Out for Delivery → Delivered
-- **Payment Status Updates**
-  - e.g., Pending → Paid → Refunded
-
-This section helps in tracking all modifications and order lifecycle events.
+![Favicon Image](/images/comment.png)
