--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,33 @@
+Welcome to the documentation of Nepal Can Logistic . This guide will help you understand the system and how to use its features effectively.
+
 ---
-title: Introduction
-description: "Welcome to the documentation of Nepal Can Logistics"
+
+## Vendor Website
+
+Vendors can create and customize their own websites according to their preferences.
+
+The vendor section includes features such as:
+
+- Website builder tools
+- Product and inventory management
+- Order tracking
+- Custom branding options
+
+Each feature is designed to give vendors full control over their storefront.
+
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+## Customer Portal
 
-## Setting up
+Customers have access to a dedicated portal where they can:
 
-The first step to world-class documentation is setting up your editing environments.
+- Place orders
+- Browse and purchase products
+- Track their orders
+- View digital purchases.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+Each customer feature is tailored for a smooth and engaging shopping experience.
 
-## Make it yours
+---
 
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+Explore each section in this documentation to learn how to get the most out of the platform.
