--- a/contractor-portal/contractordashboard.mdx
+++ b/contractor-portal/contractordashboard.mdx
@@ -12,4 +12,4 @@ The dashboard includes:
 - **Pickup Count** – Displays the total number of pickups associated with the contractor's profile.
 - **Delivery Count** – Shows all the orders that are scheduled for delivery.
 
-![Dashboard Overview](/images/dashboard.png)
+![Dashboard Overview](/images/contractordashboard.png)
