Added images in orderservice

--- a/main-app/order-service.mdx
+++ b/main-app/order-service.mdx
@@ -3,27 +3,30 @@ title: Order Services
 description: Manage and interact with all aspects of order workflows.
 ---
 
-# 🧾 Order Services
+# Order Services
 
 The **Order Services** module helps you manage, track, and take actions on orders through a comprehensive interface.
 
-## 📋 Order List
+## Order List
 
 - Displays a list of all orders.
 - Columns include: **Order Type**, **Vendor**, **Branch**, **Delivery Status**, etc.
 - Click the **New Order** button (top right) to add a new order.
 
-## 📄 Order Detail Screen
+![Favicon Image](/images/orderservicelist.png)
+
+## Order Detail Screen
 
 The detail view provides a summary and actionable tabs to manage each order.
+![Favicon Image](/images/orderservicedetail.png)
 
-### 🔍 Summary Section
+### Summary Section
 
 - Shows key details of the selected order.
 
-### 🔁 Tabs Available
+### Tabs Available
 
-#### ➤ Order Actions
+#### Order Actions
 
 Top-right button that provides actions such as:
 
@@ -33,35 +36,41 @@ Top-right button that provides actions such as:
 - **Add Documents**
 - **Manage Service Providers**
 
-#### 💬 Comments & Replies
+#### Comments & Replies
 
 - Add or reply to comments related to the order.
 
-#### 🔄 Processes
+#### Processes
 
 - View and manage the order process steps.
 
-#### 📝 Update Description
+#### Update Description
 
 - Edit and update order descriptions.
 
-#### 📎 Documents
+#### Documents
 
 - Upload and manage order-related documents.
+  ![Favicon Image](/images/orderdocument.png)
 
-#### 📜 History
+#### History
 
 - View a full audit trail of updates made to the order.
 
-#### 🤝 Service Providers
+![Favicon Image](/images/orderhistory.png)
+
+#### Service Providers
 
 - Add or update the assigned service providers.
+  ![Favicon Image](/images/orderserviceprovider.png)
 
-#### 🔁 Redirect Order
+#### Redirect Order
 
 - Redirect the order to another branch or service if needed.
 
-#### ✏️ Edit Order
+![Favicon Image](/images/orderredirect.png)
+
+#### Edit Order
 
 - Update order fields and preferences.
 
