--- a/main-app/announcement.mdx
+++ b/main-app/announcement.mdx
@@ -2,15 +2,20 @@
 
 Displays all announcements that have been made.  
 Each announcement entry shows the **Title**, **Visible To**, **Added By**, and **Created Date**.
+![Favicon Image](/images/annoucenmentlist.png)
 
 ## Add Announcement
 
 You can create a new announcement by clicking the **"New Announcement"** button and filling in the required fields.
+![Favicon Image](/images/annoucement.png)
 
 ## Announcement Details
 
 Shows complete details of the selected announcement, including who it is visible to, who created it, and the content.
 
+![Favicon Image](/images/annoucementdetail.png)
+
 ## Edit Announcement
 
 Used to update an existing announcement as needed.
+![Favicon Image](/images/annoucementedit.png)
