--- a/main-app/warehouse.mdx
+++ b/main-app/warehouse.mdx
@@ -5,15 +5,19 @@ title: # Warehouse
 ## Warehouse List
 
 Displays the complete list of warehouses that have been added.
+![Favicon Image](/images/listwarehouse.png)
 
 ## Add Warehouse
 
 Click the **"New Warehouse"** button located at the top-right corner to create a new warehouse.
+![Favicon Image](/images/addwarehouse.png)
 
 ## Edit Warehouse
 
 You can edit an existing warehouse to update its details according to your preferences.
+![Favicon Image](/images/editwarehouse.png)
 
 ## Warehouse Details
 
 View detailed information about each warehouse, including its location, status, and other relevant data.
+![Favicon Image](/images/warehousedetail.png)
