--- a/vendor-website/page-template.mdx
+++ b/vendor-website/page-template.mdx
@@ -48,6 +48,13 @@ Every page offers a variety of templates:
 - Image-Heavy
 - Minimalist, and more...
 
+## Customer Code
+
+Customer code can be added using a custom code template where you insert HTML or CSS, and it will be displayed directly on your website.
+![Favicon Image](/images/website/customecode.png)
+![Favicon Image](/images/website/customecode2.png)
+![Favicon Image](/images/website/customecode3.png)
+
 ### Drag-and-Drop Sections
 
 - Rearrange sections as you like
