--- a/vendor-website/website-pages.mdx
+++ b/vendor-website/website-pages.mdx
@@ -21,6 +21,10 @@ The following pages are included by default and **cannot be renamed or deleted**
 
 > These are essential for core e-commerce functionality and are fixed for consistency.
 
+You can also add create multiples website , there is icon on top left corner where you can add new website and select the type if its general you can create new pages and if it's e-commerces there is already default pages as mentioned below.
+
+    ![Favicon Image](/images/website/multiplewebsite.png)
+
 ---
 
 ### Adding Custom Pages
