introduction summary of each portal

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -2,7 +2,76 @@ Welcome to the documentation of Nepal Can Logistic . This guide will help you un
 
 ---
 
-## Vendor Website
+# Logistic Main - Overview
+
+This application is used to create and manage logistics orders. It includes multiple modules to support operations efficiently.
+
+## Branches
+
+- Add new branches
+- View branch list
+- Edit existing branches
+- View branch details
+
+## Services
+
+- Add new services
+- View and manage the list of services
+
+## Contacts
+
+- Add customer profiles
+- Add vendor and contractor profiles
+- Profiles are accessible from the customer portal
+
+## Orders
+
+- Create new logistics orders
+- Update and manage order details
+
+## Announcements
+
+- Create announcements
+- Announcements are visible to users based on their permissions
+
+# Vendor Portal - Overview
+
+The Vendor Portal allows vendors to manage all key activities related to logistics and operations. It provides access to various tools and resources required for daily tasks.
+
+## Core Features
+
+### Order Management
+
+- Create and manage orders directly from the portal
+
+### Customer Management
+
+- Add and manage customer profiles
+
+### Payments
+
+- Handle and track payment-related actions
+
+### Resources & Documentation
+
+- Access API documentation as reference
+- Helpful for integration and automation
+
+### Support & Feedback
+
+- Submit tickets for issues, feedback, or suggestions
+- Track the status of submitted tickets
+
+### Roles & Staff Management
+
+- Add and manage staff accounts
+- Assign roles and permissions
+
+---
+
+This portal is designed to make vendor operations efficient and organized.
+
+### Vendor Website
 
 Vendors can create and customize their own websites according to their preferences.
 
@@ -31,3 +100,33 @@ Each customer feature is tailored for a smooth and engaging shopping experience.
 ---
 
 Explore each section in this documentation to learn how to get the most out of the platform.
+
+# Contractor Portal - Overview
+
+The Contractor Portal is designed for contractors to manage their assigned tasks and access key service information.
+
+## Core Features
+
+### Delivery Assignments
+
+- View assigned deliveries with relevant details
+
+### Pickup Management
+
+- Access and manage pickup tasks
+
+### Delivery Management
+
+- Track and manage ongoing and completed deliveries
+
+### My Details
+
+- View and update your personal and contact information
+
+### Service Overview
+
+- Get an overview of services assigned or available to you
+
+---
+
+The portal helps contractors stay informed and manage their workflow efficiently.
