--- a/logistic-system/dashboard.mdx
+++ b/logistic-system/dashboard.mdx
@@ -1,10 +1,10 @@
-# 📊 Dashboard Overview
+# Dashboard Overview
 
 The Dashboard provides a summarized view of the portal's key metrics and visual insights into recent activity.
 
 ---
 
-## 🔢 Summary Cards
+## Summary Cards
 
 At the top of the dashboard, key statistics are displayed as summary cards:
 
@@ -17,7 +17,7 @@ These metrics give users a quick snapshot of overall platform activity.
 
 ---
 
-## 📅 Order Activity (Last 7 Days)
+## Order Activity (Last 7 Days)
 
 A line or bar graph displays the number of orders placed in the last 7 days.
 
