--- a/settings/organization.mdx
+++ b/settings/organization.mdx
@@ -1,4 +1,4 @@
-# ⚙️ Settings Overview
+# Settings Overview
 
 ## Account Info
 
@@ -12,7 +12,7 @@ The **Account Info** section displays essential details about the currently logg
 
 ---
 
-## 👥 User Management
+## User Management
 
 ### User Types (Tabs)
 
