--- a/vendor-website/website-pages.mdx
+++ b/vendor-website/website-pages.mdx
@@ -4,7 +4,25 @@ title: "Website Pages"
 
 The **Website Pages** section displays all the pages on your vendor website that you can manage and include in navigation.
 
+Website Type Configuration
+description: How to configure website types in your platform
+
 ---
+
+# Website Type Configuration
+
+You can choose between two types of websites:
+
+- **E-Commerce**
+- **General**
+  ![Favicon Image](/images/website/websitetype.png)
+
+## General Website
+
+If the selected website type is **General**, then:
+
+- The **Home page** is set as the **default page**.
+- All other pages (e.g., About, Contact, Services) are **automatically configured**.
 
 ### Default Pages (Non-Editable)
 
